--- a/ThreeJs-Animation-Scroll/public/index.html
+++ b/ThreeJs-Animation-Scroll/public/index.html
@@ -7,7 +7,7 @@
     <title>AJHumanAI | IT Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-s5zMvX84lBXKUaykNeF6k/26PhB6O47WuoCw+KJ4XCI1JH+fZQf8/oFUMTZgY3LJlI9pHWRvhLVD0bI5LcxvgA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -34,8 +34,8 @@
         <div class="content-fit">
             <div class="title" data-before="INNOVATIVE IT SOLUTIONS">AJ Human AI</div>
         </div>
-        <img src="img/cubes.png" class="decorate" alt="" style="width: 20vw; bottom: 0; right: 0;">
-        <img src="img/man.png" class="decorate" alt="" style="width: 28vw; bottom: 0; left: 0;">
+        <img src="../img/cubes.png" class="decorate" alt="" style="width: 20vw; bottom: 0; right: 0;">
+        <img src="../img/man.png" class="decorate" alt="" style="width: 28vw; bottom: 0; left: 0;">
     </div>
     <div class="section" id="intro">
         <div class="content-fit">
