--- a/ThreeJs-Animation-Scroll/public/index.html
+++ b/ThreeJs-Animation-Scroll/public/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJHumanAI | IT Services</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-s5zMvX84lBXKUaykNeF6k/26PhB6O47WuoCw+KJ4XCI1JH+fZQf8/oFUMTZgY3LJlI9pHWRvhLVD0bI5LcxvgA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-s5zMvX84lBXKUaykNeF6k/26PhB6O47WuoCw+KJ4XCI1JH+fZQf8/oFUMTZgY3LJlI9pHWRvhLVD0bI5LcxvgA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -29,21 +31,26 @@
             <button id="theme-toggle" class="theme-icon">🌙</button>
         </div>
     </header>
-    
+
     <div class="section" id="banner">
         <div class="content-fit">
             <div class="title" data-before="INNOVATIVE IT SOLUTIONS">AJ Human AI</div>
         </div>
-        <img src="../img/cubes.png" class="decorate" alt="" style="width: 20vw; bottom: 0; right: 0;">
-        <img src="../img/man.png" class="decorate" alt="" style="width: 28vw; bottom: 0; left: 0;">
+        <img src="/img/cubes.png" class="decorate" alt="" style="width: 20vw; bottom: 0; right: 0;">
+        <img src="/img/man.png" class="decorate" alt="" style="width: 28vw; bottom: 0; left: 0;">
+        
     </div>
     <div class="section" id="intro">
         <div class="content-fit">
             <div class="number">01</div>
             <div class="des">
                 <div class="title">Empowering Global Businesses & Students</div>
-                <p>At AJHumanAI, we specialize in delivering top-notch IT services, including Web Development, Mobile App Development, AI Integration, and Academic Project Support. Our mission is to empower businesses and educational institutions with innovative, scalable, and affordable solutions.</p>
-                <p>We proudly serve global clients across the USA, Europe, and the Middle East while catering to local colleges, startups, and small businesses in Ireland. Let us help you achieve your goals with quick and reliable project delivery.</p>
+                <p>At AJHumanAI, we specialize in delivering top-notch IT services, including Web Development, Mobile
+                    App Development, AI Integration, and Academic Project Support. Our mission is to empower businesses
+                    and educational institutions with innovative, scalable, and affordable solutions.</p>
+                <p>We proudly serve global clients across the USA, Europe, and the Middle East while catering to local
+                    colleges, startups, and small businesses in Ireland. Let us help you achieve your goals with quick
+                    and reliable project delivery.</p>
             </div>
         </div>
     </div>
@@ -53,10 +60,14 @@
             <div class="des">
                 <div class="title">Our Services</div>
                 <ul>
-                    <li><strong>Web Development:</strong> Custom websites and web applications designed to meet your needs.</li>
-                    <li><strong>Mobile App Development:</strong> iOS and Android apps for seamless user experiences.</li>
-                    <li><strong>AI Solutions:</strong> Integrating AI into your business for automation and intelligence.</li>
-                    <li><strong>College Project Support:</strong> Quality academic project assistance with timely delivery.</li>
+                    <li><strong>Web Development:</strong> Custom websites and web applications designed to meet your
+                        needs.</li>
+                    <li><strong>Mobile App Development:</strong> iOS and Android apps for seamless user experiences.
+                    </li>
+                    <li><strong>AI Solutions:</strong> Integrating AI into your business for automation and
+                        intelligence.</li>
+                    <li><strong>College Project Support:</strong> Quality academic project assistance with timely
+                        delivery.</li>
                     <li><strong>E-commerce Solutions:</strong> Scalable platforms tailored for small enterprises.</li>
                 </ul>
             </div>
@@ -67,8 +78,10 @@
             <div class="number">03</div>
             <div class="des">
                 <div class="title">Our Vision & Mission</div>
-                <p><strong>Vision:</strong> To empower global businesses and students with innovative and scalable IT solutions.</p>
-                <p><strong>Mission:</strong> Deliver top-notch software services and project solutions, fostering growth for businesses and education.</p>
+                <p><strong>Vision:</strong> To empower global businesses and students with innovative and scalable IT
+                    solutions.</p>
+                <p><strong>Mission:</strong> Deliver top-notch software services and project solutions, fostering growth
+                    for businesses and education.</p>
             </div>
         </div>
     </div>
@@ -99,8 +112,8 @@
             </div>
         </div>
     </div>
-      <!-- Footer Section -->
-      <footer>
+    <!-- Footer Section -->
+    <footer>
         <div class="content-fit">
             <div class="footer-content">
                 <div class="footer-logo">AJHumanAI</div>
@@ -127,8 +140,8 @@
 <div id="container3D"></div>
 <script type="module" src="app.js"></script>
 <script src="theme-toggle.js"></script>
-   <!-- Add the mobile toggle script here -->
-   <script>
+<!-- Add the mobile toggle script here -->
+<script>
     // Toggle mobile navigation
     document.getElementById("menu-toggle").addEventListener("click", () => {
         document.getElementById("navbar").classList.toggle("active");
